[gd_scene load_steps=6 format=3 uid="uid://b72vhwodq67va"]

[ext_resource type="Script" path="res://Objects/Mineral Deposit.gd" id="1_11ea8"]
[ext_resource type="Texture2D" uid="uid://dhpop8ie31o0j" path="res://Character/light_glow.png" id="1_fu48w"]
[ext_resource type="FontFile" uid="uid://c5n0dcrx4814y" path="res://HUD/Art Assets/PetitePx.ttf" id="3_ietyc"]
[ext_resource type="Texture2D" uid="uid://cdjx4qyt5ge0x" path="res://HUD/Art Assets/Keyboard_Numbers.png" id="4_7gy3u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qh2tc"]
radius = 20.2237

[node name="Mineral Deposit" type="Node2D"]
script = ExtResource("1_11ea8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qh2tc")

[node name="PointLight2D2" type="PointLight2D" parent="."]
show_behind_parent = true
color = Color(0.0509804, 0.298039, 0.321569, 1)
energy = 1.46
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("1_fu48w")
texture_scale = 2.5
metadata/_edit_lock_ = true

[node name="GlowTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Mineral_Instruction" type="Label" parent="."]
visible = false
offset_left = -43.0
offset_top = -72.0
offset_right = 43.0
offset_bottom = -38.0
theme_override_fonts/font = ExtResource("3_ietyc")
theme_override_font_sizes/font_size = 16
text = "PRESS      TO ADD
TO YOUR FLARE"
horizontal_alignment = 1

[node name="Button2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-3, -67)
scale = Vector2(1.41667, 1.41667)
texture = ExtResource("4_7gy3u")
region_enabled = true
region_rect = Rect2(81, 2, 13, 12)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="GlowTimer" to="." method="_on_glow_timer_timeout"]
